--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root@127.0.0.1:3309/practiceproject"
+DATABASE_URL='mysql://6qvj7xv9ne3jz66r2rw0:pscale_pw_PIsOeV2beyRN83L26au61hXyDcjGFwtqzEutZ8r5BNk@us-east.connect.psdb.cloud/practiceproject?sslaccept=strict'
