--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@prisma/client": "4.3.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
